fix(adhere-ui-polygonselection): cropping样式修改

--- a/packages/adhere-ui-polygonselection/src/cropping/index.less
+++ b/packages/adhere-ui-polygonselection/src/cropping/index.less
@@ -38,5 +38,6 @@
 
   > img {
     width: 100%;
+    max-height: 100%;
   }
 }
